# klt_tracker

./: .gitignore  CMakeLists.txt  package.xml  setup.py
latex/: james_vi_ekf.lyx  james_vi_ekf.tex  library.bib  main.tex  mekf_robocentric.21.lyx  mekf_robocentric.lyx  newfile1.lyx  newfile1.tex  overview.tex  vi-ekf.tex  vi-ekf_presentation.tex
src/: klt_tracker.py  main.py
