<?xml version="1.0"?>
<package format="2">
  <name>klt_tracker</name>
  <version>0.0.0</version>
  <description>The KLT tracker package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
